--- a/src/components/Customer/customeredit.style.scss
+++ b/src/components/Customer/customeredit.style.scss
@@ -1,114 +1,96 @@
-.customer-edit{
-  background-color: #fff;
-  width: 370px;
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.modelBackground {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(200, 200, 200, 0.5);
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
+  width: 50%;
+}
+
+.form-popup {
   display: flex;
-  justify-content: space-between;
-  padding: 20px 40px;
-  margin: 0 auto;
-  .customer-edit_image{
-    width: 85px;
-    img{
-      width: 100%;
-      border-radius: 50px;
-      border: solid 1px black;
-    }
+  position: fixed;
+  top: 10%;
+  left: 35%;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  z-index: 9;
+}
+
+.form-container {
+  border-radius: 5px;
+  max-width: 500px;
+  padding: 10px;
+  background-color: white;
+
+  label {
+    font-weight: bold;
   }
-  .customer-edit_infor{
-    .proirity{
-      color: red;
-    }
-    .customer-edit_label{
-      display: block;
-      margin-bottom: 6px;
-    }
-    select{
-      display: block;
-      padding: 5px 12px;
-      margin-bottom: 7px;
-    }
-    input{
-      display: block;
-      padding: 5px 12px;
-      margin-bottom: 7px;
-    }
-    .switch {
-      position: relative;
-      display: block;
-      width: 45px;
-      height: 23px;
-    
-    
-    input { 
-      opacity: 0;
-      width: 0;
-      height: 0;
-    }
-    
-    .slider {
-      position: absolute;
-      cursor: pointer;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background-color: #ccc;
-      -webkit-transition: .4s;
-      transition: .4s;
-    }
-    
-    .slider:before {
-      position: absolute;
-      content: "";
-      height: 20px;
-      width: 20px;
-      left: 4px;
-      bottom: 1px;
-      background-color: white;
-      -webkit-transition: .4s;
-      transition: .4s;
-    }
-    
-    input:checked + .slider {
-      background-color: #19cf41;
-    }
-    
-    input:focus + .slider {
-      box-shadow: 0 0 1px #19cf41;
-    }
-    
-    input:checked + .slider:before {
-      -webkit-transform: translateX(26px);
-      -ms-transform: translateX(26px);
-      transform: translateX(19px);
-    }
-    
-    /* Rounded sliders */
-    .slider.round {
-      border-radius: 34px;
-    }
-    
-    .slider.round:before {
-      border-radius: 50%;
-    }
+
+  .btn {
+    font-size: 12px;
+    font-weight: bold;
+    background-color: #04aa6d;
+    color: white;
+    padding: 13px 42px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 10px 10px 10px 0px;
+    width: 50%;
+    opacity: 0.8;
   }
-  .action{
-    margin-top: 15px;
-    justify-content: left;
-    float: right;
-    button{
-      padding: 8px 25px;
-      border: none;
-      border-radius: 5px;
-      color: #fff;
-      font-size: 14px;
-    }
-    .btn-success{
-      background-color: aqua;
-      margin-right: 10px;
-    }
-    .btn-danger{
-      background-color: red;
-    }
+
+  .cancel {
+    background-color: red;
   }
-  }
+}
+
+.form-container input[type="text"],
+.form-container input[type="password"] {
+  width: 100%;
+  padding: 15px;
+  height: 30px;
+  margin: 5px 0 12px 0;
+  border: 1px solid #000;
+  background: #f1f1f1;
+}
+
+.form-container input[type="text"]:focus,
+.form-container input[type="password"]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+.form-container .btn:hover,
+.open-button:hover {
+  opacity: 1;
+}
+
+.left .avatar {
+  margin: 0px 50px;
+  width: 25%;
+  height: 25%;
+  border-radius: 50%;
+  border: 2px solid #000;
+}
+
+.proirity {
+  color: red;
+}
+
+.type {
+  margin: 5px 0px 5px 0px;
 }
