--- a/src/components/MyTable/table.scss
+++ b/src/components/MyTable/table.scss
@@ -1,19 +1,23 @@
 .table-wrapper {
 	overflow-y: auto;
 }
+
 table {
 	width: 100%;
 	min-width: 400px;
 	border-spacing: 0;
 }
+
 tr {
 	text-align: left;
 }
+
 th,
 td {
 	text-transform: capitalize;
 	padding: 15px 10px;
 }
+
 .table__pagination {
 	display: flex;
 	width: 100%;
@@ -21,6 +25,7 @@ td {
 	align-items: center;
 	margin-top: 10px;
 }
+
 .table__pagination-item {
 	width: 30px;
 	height: 30px;
@@ -29,20 +34,24 @@ td {
 	align-items: center;
 	justify-content: center;
 	cursor: pointer;
-	& ~ .table__pagination-item {
+
+	&~.table__pagination-item {
 		margin-left: 10px;
 	}
+
 	&:hover {
 		color: var(--txt-white);
 		background-color: var(--second-color);
 	}
 }
+
 .table__pagination-item.active,
 .table__pagination-item.active:hover {
 	background-color: var(--main-color);
 	color: var(--txt-white);
 	font-weight: 600;
 }
+
 .status {
 	border-radius: 10px;
 	color: white;
@@ -52,17 +61,21 @@ td {
 	width: 180px;
 	font-size: 15px;
 	text-align: center;
+
 	&.green {
 		background-color: #19cf41;
 	}
+
 	&.red {
 		background-color: #eb1421;
 	}
 }
+
 .icon {
 	font-size: 22px;
 	margin-right: 10px;
 }
+
 .checkBoxStatus {
 	-webkit-appearance: none;
 	appearance: none;
@@ -70,24 +83,34 @@ td {
 	padding-left: 40px;
 	margin: 0;
 	border-radius: 16px;
-	background: radial-gradient(
-      circle 12px,
-      rgba(96, 95, 95, 1) 100%,
-      transparent calc(100% + 1px)
-    )
-    #ccc -65px;
+	background: radial-gradient(circle 12px,
+			rgba(96, 95, 95, 1) 100%,
+			transparent calc(100% + 1px)) #ccc -65px;
 	transition: 0.3s ease-in-out;
+
 	&::before {
 		content: "Ngưng hoạt động";
 		font: bold 12px/32px Verdana;
 		color: white;
 	}
 }
+
 :checked {
 	padding-left: 8px;
 	background-color: rgb(25, 207, 65);
 	background-position: 65px;
+
 	&::before {
 		content: "Đang hoạt động";
+	}
+}
+
+tbody {
+	cursor: pointer;
+
+	tr:hover {
+		background-color: rgba(217, 217, 217, 0.8);
+		border-radius: 10px;
+
 	}
 }
