--- a/src/components/User/useredit.style.scss
+++ b/src/components/User/useredit.style.scss
@@ -1,3 +1,17 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.modelBackground {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(200, 200, 200, 0.5);
+}
+
 .left {
   float: left;
 }
@@ -8,17 +22,16 @@
 }
 
 .form-popup {
-  background-color: #fff;
-  display: block;
+  display: flex;
   position: fixed;
-  top: 20px;
-  left: 500px;
-  border: 3px solid #f1f1f1;
+  top: 3%;
+  left: 35%;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   z-index: 9;
 }
 
 .form-container {
-  max-width: 654px;
+  max-width: 500px;
   padding: 10px;
   background-color: white;
 
@@ -66,9 +79,9 @@
 }
 
 .left .avatar {
-  margin: 0px 50px;
-  width: 140px;
-  height: 140px;
+  margin: 0px 30px;
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
   border: 2px solid #000;
 }
