--- a/src/components/Combo/comboedit.style.scss
+++ b/src/components/Combo/comboedit.style.scss
@@ -2,6 +2,7 @@
     background-color: #fff;
     width: 900px;
     display: flex;
+    position: fixed;
     justify-content: space-between;
     padding: 20px 40px;
     margin: 0 auto;
