--- a/src/components/User/useredit.style.scss
+++ b/src/components/User/useredit.style.scss
@@ -67,8 +67,14 @@
   background: #f1f1f1;
 }
 
+textarea{
+  width: 100%;
+  height: 80px;
+}
+
 .form-container input[type="text"]:focus,
-.form-container input[type="password"]:focus {
+.form-container input[type="password"]:focus,
+textarea:focus {
   background-color: #ddd;
   outline: none;
 }
